--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/core": "^5.3.0",
     "@adonisjs/lucid": "^16.2.1",
     "@adonisjs/repl": "^3.1.0",
+    "exceljs": "^4.3.0",
     "luxon": "^2.0.2",
     "mysql": "^2.18.1",
     "proxy-addr": "^2.0.7",
